--- a/src/app/file-upload-home/child_components/audio-recorder/audio-recorder.component.scss
+++ b/src/app/file-upload-home/child_components/audio-recorder/audio-recorder.component.scss
@@ -86,7 +86,7 @@ background: red;
 	background-color: #d8d8d8;
     margin-bottom: 2%;
 }
-.main-container{
-    display: flex;
-    flex-direction: column;
-}
+// .main-container{
+//     display: flex;
+//     flex-direction: column;
+// }
