--- a/src/app/file-upload-home/child_components/approvals/approvals.component.html
+++ b/src/app/file-upload-home/child_components/approvals/approvals.component.html
@@ -377,17 +377,17 @@
 </div>
 
 <!-- modal -->
-<div class="modal fade" id="submitPopup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="submitPopup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-bs-backdrop="static" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
           <div class="d-flex justify-content-end m-2" >
-            <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close" ></button>
+            <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close" (click)="submittedPopUP()"></button>
 
           </div>
           <div class="modal-body">
             <div class="PopUpImage">
               <img src="assets/images/e26e4c2da924bdf6440b422619bb6c9b.jpeg" alt="" height="60%" width="100%"> 
-              <span class="successMessage">{{successMessage}}</span>
+              <span class="successMessage" style="display: flex;justify-content: center;">{{successMessage}}</span>
             </div>
            
             
