--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.html
@@ -126,28 +126,31 @@
           </ng-template>
      
           </div>
-         
-            <div class="priviewUploadContentMobile mb-2" *ngIf="contentUploaded||this.http.videoContentUploaded==true">
+          <div *ngIf="contentUploaded||this.http.videoContentUploaded==true;then previewWeb"></div>
+            <ng-template #previewWeb>
+              <div class="priviewUploadContentMobile mb-2" >
               
-              <div class="gray_container_mobile d-flex align-items-center gap-2">
-                  <div>
-                      <div class="fileIconForPdf">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 36 36" fill="none">
-                              <path d="M11.5 27H24.5V24H11.5V27ZM11.5 21H24.5V18H11.5V21ZM8.25 33C7.35625 33 6.59115 32.7062 5.95469 32.1187C5.31823 31.5312 5 30.825 5 30V6C5 5.175 5.31823 4.46875 5.95469 3.88125C6.59115 3.29375 7.35625 3 8.25 3H21.25L31 12V30C31 30.825 30.6818 31.5312 30.0453 32.1187C29.4089 32.7062 28.6438 33 27.75 33H8.25ZM19.625 13.5V6H8.25V30H27.75V13.5H19.625Z" fill="black"/>
-                          </svg>
-                      </div>
-                     
-                  </div>
-                  
-                  <div class="d-flex flex-column gap-1">
-                      <span><b id="fileNameDisplay">{{fileName?fileName:this.http.fileData.name}}</b></span>
-                      <span><span >{{fileSize?fileSize:this.http.fileData.file_size}}</span>|<span ></span>{{fileType?fileType:this.http.fileData.file_type}}</span>
-                  </div>
-              </div>
-              <div class="d-flex justify-content-end">
-                  <span class="">Status</span>
-              </div>
-          </div>
+                <div class="gray_container_mobile d-flex align-items-center gap-2">
+                    <div>
+                        <div class="fileIconForPdf">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 36 36" fill="none">
+                                <path d="M11.5 27H24.5V24H11.5V27ZM11.5 21H24.5V18H11.5V21ZM8.25 33C7.35625 33 6.59115 32.7062 5.95469 32.1187C5.31823 31.5312 5 30.825 5 30V6C5 5.175 5.31823 4.46875 5.95469 3.88125C6.59115 3.29375 7.35625 3 8.25 3H21.25L31 12V30C31 30.825 30.6818 31.5312 30.0453 32.1187C29.4089 32.7062 28.6438 33 27.75 33H8.25ZM19.625 13.5V6H8.25V30H27.75V13.5H19.625Z" fill="black"/>
+                            </svg>
+                        </div>
+                       
+                    </div>
+                    
+                    <div class="d-flex flex-column gap-1">
+                        <span><b id="fileNameDisplay">{{fileName?fileName:this.http.fileData.name}}</b></span>
+                        <span><span >{{fileSize?fileSize:this.http.fileData.file_size}}</span>|<span ></span>{{fileType?fileType:this.http.fileData.file_type}}</span>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <span class="">Status</span>
+                </div>
+            </div>
+            </ng-template>
+          
           <div class="col-12 d-flex">
               <input type="text"  placeholder="Type a Message"  [(ngModel)]="demoMessage">
               <div class="btn-group">
@@ -155,9 +158,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                       <path d="M2.1333 9.20835L9.79163 16.8667C10.7298 17.8049 12.0023 18.332 13.3291 18.332C14.6559 18.332 15.9284 17.8049 16.8666 16.8667C17.8048 15.9285 18.3319 14.656 18.3319 13.3292C18.3319 12.0024 17.8048 10.7299 16.8666 9.79168L9.2083 2.13335C8.58283 1.50788 7.73451 1.15649 6.84996 1.15649C5.96542 1.15649 5.1171 1.50788 4.49163 2.13335C3.86616 2.75882 3.51478 3.60713 3.51477 4.49168C3.51477 5.37623 3.86616 6.22455 4.49163 6.85002L12.1583 14.5083C12.471 14.8211 12.8952 14.9968 13.3375 14.9968C13.7797 14.9968 14.2039 14.8211 14.5166 14.5083C14.8294 14.1956 15.0051 13.7715 15.0051 13.3292C15.0051 12.8869 14.8294 12.4627 14.5166 12.15L7.44163 5.08335" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                   
                   </button>
-                  
                   <div class="dropdown-menu dropdown-menu-end">
                     <div class="attachmentContainer">
                       <div class="d-flex flex-column gap-1 align-items-center">
@@ -227,8 +228,8 @@
                 </div>
           </div>
           <div class="d-flex justify-content-end gap-2 mt-4 mb-2">
-              <button  class="btn btn_save" [disabled]="true">Save</button>
-              <button  class="btn btn_submit"  (click)="postUploadedData('')"  (mouseover)="openSubmitModal()"  data-bs-toggle="modal" data-bs-target="#submitPopup"  >Submit</button>
+              <!-- <button  class="btn btn_save" [disabled]="true">Save</button> -->
+              <button  class="btn btn_submit"  (click)="postUploadedData('')"  (mouseover)="openSubmitModal()"  data-bs-toggle="modal" data-bs-target="#submitPopup"  [disabled]="submitBtnDisabled">Submit</button>
           </div>
           </div>
           
@@ -524,30 +525,32 @@
           </ng-template>
          
   
-        
-  
-       
-            <div class="priviewUploadContentMobile mb-2 mt-2" *ngIf="contentUploaded">
+          
+          <div *ngIf="contentUploadedMobile==true;then previewMobile"></div>
+            <ng-template #previewMobile>
+              <div class="priviewUploadContentMobile mb-2 mt-2">
               
-              <div class="gray_container_mobile d-flex align-items-center gap-2">
-                  <div>
-                      <div class="fileIconForPdf">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 36 36" fill="none">
-                              <path d="M11.5 27H24.5V24H11.5V27ZM11.5 21H24.5V18H11.5V21ZM8.25 33C7.35625 33 6.59115 32.7062 5.95469 32.1187C5.31823 31.5312 5 30.825 5 30V6C5 5.175 5.31823 4.46875 5.95469 3.88125C6.59115 3.29375 7.35625 3 8.25 3H21.25L31 12V30C31 30.825 30.6818 31.5312 30.0453 32.1187C29.4089 32.7062 28.6438 33 27.75 33H8.25ZM19.625 13.5V6H8.25V30H27.75V13.5H19.625Z" fill="black"/>
-                          </svg>
-                      </div>
-                     
-                  </div>
-                  
-                  <div class="d-flex flex-column gap-1">
-                      <span><b id="fileNameDisplay">{{fileName}}</b></span>
-                      <span><span >{{fileSize}}</span>|<span ></span>{{fileType}}</span>
-                  </div>
-              </div>
-              <div class="d-flex justify-content-end">
-                  <span class="">Status</span>
-              </div>
-          </div>
+                <div class="gray_container_mobile d-flex align-items-center gap-2">
+                    <div>
+                        <div class="fileIconForPdf">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 36 36" fill="none">
+                                <path d="M11.5 27H24.5V24H11.5V27ZM11.5 21H24.5V18H11.5V21ZM8.25 33C7.35625 33 6.59115 32.7062 5.95469 32.1187C5.31823 31.5312 5 30.825 5 30V6C5 5.175 5.31823 4.46875 5.95469 3.88125C6.59115 3.29375 7.35625 3 8.25 3H21.25L31 12V30C31 30.825 30.6818 31.5312 30.0453 32.1187C29.4089 32.7062 28.6438 33 27.75 33H8.25ZM19.625 13.5V6H8.25V30H27.75V13.5H19.625Z" fill="black"/>
+                            </svg>
+                        </div>
+                       
+                    </div>
+                    
+                    <div class="d-flex flex-column gap-1">
+                      <span><b id="fileNameDisplay">{{fileName?fileName:this.http.fileData?.name}}</b></span>
+                      <span><span >{{fileSize?fileSize:this.http.fileData?.file_size}}</span>|<span ></span>{{fileType?fileType:this.http.fileData?.file_type}}</span>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <span class="">Status</span>
+                </div>
+            </div>
+            </ng-template>
+          
           <div class="col-12 d-flex mt-3">
               <input type="text"  placeholder="Type a Message"  [(ngModel)]="demoMessage" style="height: 6vh;">
               <div class="btn-group ">
@@ -562,13 +565,13 @@
                     <div class="attachmentContainerMobile">
                   
                       <div class="AttachIconsMobile">
-                        <a class="dropdown-item" onclick="document.getElementById('fileInputMobile').click()">
+                        <a class="dropdown-item" onclick="document.getElementById('fileInput').click()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                                 <path d="M8 18H16V16H8V18ZM8 14H16V12H8V14ZM6 22C5.45 22 4.97917 21.8042 4.5875 21.4125C4.19583 21.0208 4 20.55 4 20V4C4 3.45 4.19583 2.97917 4.5875 2.5875C4.97917 2.19583 5.45 2 6 2H14L20 8V20C20 20.55 19.8042 21.0208 19.4125 21.4125C19.0208 21.8042 18.55 22 18 22H6ZM13 9V4H6V20H18V9H13Z"
                                     fill="black" />
                             </svg>
                         </a>
-                        <input type="file" accept=".doc, .docx, application/pdf" id="fileInputMobile" (change)="handleFileInput($event)">
+                        <input type="file" accept=".doc, .docx, application/pdf" id="fileInput" (change)="handleFileInput($event)">
                     </div>
                       <div class="AttachIconsMobile" data-bs-toggle="modal" data-bs-target="#modalForCaptureImage" (click)="openCamera()" (mouseover)="openCameraModal()"><a class="dropdown-item">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -618,7 +621,7 @@
               </div>
           </div>
           <div class="d-flex justify-content-end gap-2 mt-3 mb-2">
-              <button  class="btn btn_save">Save</button>
+              <!-- <button  class="btn btn_save">Save</button> -->
               <button  class="btn btn_submit"  (click)="postUploadedData('')" (mouseover)="openSubmitModal()"  data-bs-toggle="modal" data-bs-target="#submitPopup">Submit</button>
           </div>
           </div>
@@ -869,7 +872,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="d-flex justify-content-end m-2" >
-              <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close" ></button>
+              <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close" (click)="closeSubmitBtn()"></button>
   
             </div>
             <div class="modal-body">
