--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
@@ -60,6 +60,7 @@ input {
 
 
 }
+
 .AttachIcons input[type="file"] {
     display: none;
 }
@@ -135,7 +136,7 @@ input {
     color: #fff;
 }
 
-.uploadStatusCard{
+.uploadStatusCard {
     min-height: 17vh;
     width: 98%;
     margin-left: 1%;
@@ -146,10 +147,11 @@ input {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    gap:1em;
+    gap: 1em;
 
 }
-.uploadStatusCardMobile{
+
+.uploadStatusCardMobile {
     min-height: 17vh;
     width: 98%;
     margin-left: 1%;
@@ -160,12 +162,13 @@ input {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
-    gap:1em;
+    gap: 1em;
 
 }
-.uploadStatusCardExtended{
-//    min-height: 70vh;
-height: auto;
+
+.uploadStatusCardExtended {
+    //    min-height: 70vh;
+    height: auto;
     width: 98%;
     margin-left: 1%;
     align-self: center;
@@ -176,10 +179,11 @@ height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap:1em;
+    gap: 1em;
 
 }
-.priviewUploadContentMobile{
+
+.priviewUploadContentMobile {
     border-radius: 7px;
     border: 1px solid #D3D3D3;
     background: #FFF;
@@ -189,7 +193,17 @@ height: auto;
     width: 100%;
 
 }
-.priviewUploadContentExtendedCard{
+.priviewUploadContent{
+    border-radius: 7px;
+    border: 1px solid #D3D3D3;
+    background: #FFF;
+    min-height: 10vh;
+    margin-top: 2vh;
+    padding: 1%;
+    width: 100%;
+}
+
+.priviewUploadContentExtendedCard {
     border-radius: 7px;
     border: 1px solid #D3D3D3;
     background: #FFF;
@@ -200,47 +214,50 @@ height: auto;
 
 
 }
-.gray_container_mobile{
-min-height: 7vh;
-border-radius: 6px;
-background: #D3D3D3;
-width: 100%;
-padding: 2%;
+
+.gray_container_mobile {
+    min-height: 7vh;
+    border-radius: 6px;
+    background: #D3D3D3;
+    width: 100%;
+    padding: 2%;
 
 }
 
-.imgContainer{
+.imgContainer {
     border-radius: 7px;
-border: 0.5px solid #D8D8D8;
-display: flex;
-justify-content: center;
-align-items: center;
+    border: 0.5px solid #D8D8D8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.FeedBackdescription{
+
+.FeedBackdescription {
     color: #000;
     font-family: 'Lato', sans-serif;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: -0.24px;
+    font-size: 1em;
+    font-style: normal;
+    font-weight: 400;
+    // line-height: normal;
+    // letter-spacing: -0.24px;
 
 }
-.feedBackEmojiContainer{
+
+.feedBackEmojiContainer {
     height: 5vh;
     width: 50%;
     display: flex;
-    gap:0.5em
-
+    gap: 0.5em
 }
-.feedBackEmojiContainerMobile{
+
+.feedBackEmojiContainerMobile {
     height: 5vh;
     width: 100%;
     display: flex;
-    gap:0.5em
-
+    gap: 0.5em
 }
-.PopUpImage{
+
+.PopUpImage {
     height: 100%;
     width: 100%;
     padding: 2%;
@@ -250,24 +267,28 @@ letter-spacing: -0.24px;
     align-items: center;
 
 }
-.successMessage{
+
+.successMessage {
     color: #000;
-text-align: center;
-font-family: 'Lato', sans-serif;
-font-size: 24px;
-font-style: normal;
-font-weight: 400;
-line-height: 39px; /* 162.5% */
-letter-spacing: 1.1px;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 39px;
+    /* 162.5% */
+    letter-spacing: 1.1px;
 }
-.uploadStatusContainer{
+
+.uploadStatusContainer {
     height: 59vh;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-   
+
 }
-.newUploadStatusContainer_mobile{
+
+.newUploadStatusContainer_mobile {
     height: 73vh;
     width: 100%;
     overflow-y: auto;
@@ -279,33 +300,40 @@ letter-spacing: 1.1px;
 
 
 @media screen and (min-width:1024.1px) {
-   
-    .mobile-view{
+
+    .mobile-view {
         display: none;
     }
-    ::ng-deep{
-        .webcam-wrapper, video.mirrored {
+
+    ::ng-deep {
+
+        .webcam-wrapper,
+        video.mirrored {
             transform: scaleX(-1);
             height: 100% !important;
-            width:100% !important;
+            width: 100% !important;
         }
     }
 }
+
 @media screen and (min-width:270px) and (max-width:1024px) {
-    .web-view{
+    .web-view {
         display: none;
     }
-    ::ng-deep{
-        .webcam-wrapper, video.mirrored {
+
+    ::ng-deep {
+
+        .webcam-wrapper,
+        video.mirrored {
             transform: scaleX(-1);
             height: 100% !important;
-            width:100% !important;
+            width: 100% !important;
         }
     }
 }
 
 // Mobile view Started
-.attachmentButtonMobile{
+.attachmentButtonMobile {
     border-radius: 100px;
     border: 1px solid #D3D3D3;
     background: #FFF;
@@ -319,7 +347,8 @@ letter-spacing: 1.1px;
     align-items: center;
 
 }
-.attachmentContainerMobile{
+
+.attachmentContainerMobile {
     display: grid;
     gap: 0.5em;
     // width: 90vw;
@@ -327,7 +356,8 @@ letter-spacing: 1.1px;
     grid-template-columns: repeat(4, 1fr);
 
 }
-.AttachIconsMobile{
+
+.AttachIconsMobile {
     width: 50px;
     height: 50px;
     flex-shrink: 0;
@@ -338,6 +368,7 @@ letter-spacing: 1.1px;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
     .dropdown-item {
         display: flex;
         justify-content: center;
@@ -346,60 +377,83 @@ letter-spacing: 1.1px;
     }
 
 }
+
 .AttachIconsMobile input[type="file"] {
     display: none;
 }
-.emojis{
-    height: 35px;;
+
+.emojis {
+    height: 35px;
+    ;
     // width: 100px;
     display: flex;
-    gap:0.5em;
+    gap: 0.5em;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
 }
-.activeEmojis{
+
+.activeEmojis {
     height: 35px;;
     // width: 100px;
     display: flex;
-    gap:0.5em;
+    gap: 0.5em;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
     // transform: scale(1.2);
-    img{
-        transform: scale(1.3);
+    img {
+        animation: dancingEmojis 2s infinite;
     }
-
-}
-.modal-title{
-    font-family: sans-serif;
-    font-weight: 600;
-    color:#000;
-    font-size: 1.2em;
-
-}
-.select-manager-btn{
-    border:1px solid gray;
-    color: gray;
-    text-align: left;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2%;
+    @keyframes dancingEmojis {
+        0% {
+            transform: scale(1.0);
+        }
+        50% {
+            transform: scale(1.5);
+        }
+        100% {
+            transform: scale(1.0);
+        }
+    }
+    
    
 
 }
-.select-manager-mobile-btn{
-    border:1px solid gray;
+
+
+.modal-title {
+    font-family: sans-serif;
+    font-weight: 600;
+    color: #000;
+    font-size: 1.2em;
+
+}
+
+.select-manager-btn {
+    border: 1px solid gray;
     color: gray;
     text-align: left;
     display: flex;
     justify-content: space-between;
     margin-bottom: 2%;
-    
+
+
 }
-.selectManagerCardWeb{
+
+.select-manager-mobile-btn {
+    border: 1px solid gray;
+    color: gray;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2%;
+
+}
+
+.selectManagerCardWeb {
 
     border: 1px solid gray;
     border-radius: 5px;
@@ -410,7 +464,8 @@ letter-spacing: 1.1px;
     height: 30vh;
     overflow-y: auto;
 }
-.selectManagerCard{
+
+.selectManagerCard {
     border: 1px solid gray;
     border-radius: 5px;
     // position: absolute;
@@ -420,6 +475,7 @@ letter-spacing: 1.1px;
 
 
 }
+
 .mobile-searchbar {
     /* Add this to make the container a flex container */
     display: flex;
@@ -432,7 +488,7 @@ letter-spacing: 1.1px;
     // padding: 0.5rem 0.6875rem;
     gap: 5.75rem;
     outline: 1px solid gray;
-    border-radius:5px;
+    border-radius: 5px;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     position: relative;
@@ -444,14 +500,15 @@ letter-spacing: 1.1px;
     /* Increase left padding to make space for the icon */
 
     // border-radius: 1.25rem;
-   
+
     position: relative;
     background-image: url('../../../../assets/images/zoom-out.svg');
     background-repeat: no-repeat;
     background-position: right 0.5rem center;
     background-size: 1.7rem;
 }
-.managers_containerWeb{
+
+.managers_containerWeb {
     width: 100%;
     padding: 2%;
     height: 300px;
@@ -461,9 +518,9 @@ letter-spacing: 1.1px;
     align-items: start;
 
     // padding: 2%;
-    .managersCardWeb{
+    .managersCardWeb {
         width: 100%;
-     
+
         flex-shrink: 0;
         border-radius: 4px;
         border: 1px solid #000;
@@ -476,30 +533,34 @@ letter-spacing: 1.1px;
         margin-top: 2%;
 
     }
-    .managerImageContainer{
+
+    .managerImageContainer {
         height: 50px;
         width: 50px;
         border: 1px solid #000;
         border-radius: 100%;
 
     }
-    .managerSLable{
+
+    .managerSLable {
         color: #8E8E8E;
         font-family: 'Lato', sans-serif;
         font-size: 10px;
         font-style: normal;
         font-weight: 700;
-        line-height: 24.5px; /* 245% */
+        line-height: 24.5px;
+        /* 245% */
         letter-spacing: 0.6px;
     }
-    .addBtnWeb{
-        width:80px;
+
+    .addBtnWeb {
+        width: 80px;
         height: 20px;
         padding: 2%;
         flex-shrink: 0;
         border-radius: 10px;
         background: #F21323;
-        color:#fff;
+        color: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -508,15 +569,17 @@ letter-spacing: 1.1px;
     }
 
 }
-.managers_container{
+
+.managers_container {
     width: 100%;
     padding: 2%;
     height: 300px;
     overflow-y: auto;
     padding: 2%;
-    .managersCard{
+
+    .managersCard {
         width: 100%;
-     
+
         flex-shrink: 0;
         border-radius: 4px;
         border: 1px solid #000;
@@ -529,64 +592,69 @@ letter-spacing: 1.1px;
         margin-top: 2%;
 
     }
-    .managerImageContainer{
+
+    .managerImageContainer {
         height: 50px;
         width: 50px;
         border: 1px solid #000;
         border-radius: 100%;
 
     }
-    .managerSLable{
+
+    .managerSLable {
         color: #8E8E8E;
         font-family: 'Lato', sans-serif;
         font-size: 10px;
         font-style: normal;
         font-weight: 700;
-        line-height: 24.5px; /* 245% */
+        line-height: 24.5px;
+        /* 245% */
         letter-spacing: 0.6px;
     }
-    .addBtn{
-        width:60px;
+
+    .addBtn {
+        width: 60px;
         height: 20px;
         padding: 2%;
         flex-shrink: 0;
         border-radius: 10px;
         background: #F21323;
-        color:#fff;
+        color: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
 
     }
-    
+
 }
-.selectedManagerList{
-        width: 95%;
-        flex-shrink: 0;
+
+.selectedManagerList {
+    width: 95%;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid gray;
+    background: #FFF;
+    min-height: 50px;
+    padding: 2%;
+    display: grid;
+    place-items: center;
+    gap: 0.5em;
+    grid-template-columns: repeat(2, 1fr);
+
+    // flex-wrap: wrap;
+
+
+    margin: 2%;
+
+    .selectedmanager {
         border-radius: 4px;
-        border: 1px solid gray;
-        background: #FFF;
-        min-height: 50px;
-        padding: 2%;
-        display: grid;
-        place-items:center ;
-        gap: 0.5em;
-        grid-template-columns: repeat(2, 1fr);
-        
-        // flex-wrap: wrap;
+        background: #D9D9D9;
+        min-height: 3vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 3%;
 
-      
-        margin: 2%;
-
-        .selectedmanager{
-            border-radius: 4px;
-            background: #D9D9D9;
-            min-height: 3vh;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 3%;
-            
-        }
+    }
 }
