--- a/src/app/file-upload-home/child_components/approvals/approvals.component.scss
+++ b/src/app/file-upload-home/child_components/approvals/approvals.component.scss
@@ -280,3 +280,31 @@
     display: grid;
     align-items: center;
 }
+.activeEmojis {
+    height: 35px;;
+    // width: 100px;
+    display: flex;
+    gap: 0.5em;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    // transform: scale(1.2);
+    img {
+        animation: dancingEmojis 2s infinite;
+    }
+    @keyframes dancingEmojis {
+        0% {
+            transform: scale(1.0);
+        }
+        50% {
+            transform: scale(1.5);
+        }
+        100% {
+            transform: scale(1.0);
+        }
+    }
+    
+   
+
+}
