--- a/src/app/file-upload-home/child_components/mobile-user-upload/mobile-user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/mobile-user-upload/mobile-user-upload.component.scss
@@ -182,6 +182,16 @@ input {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     color: #fff;
 }
+.PopUpImage {
+    height: 100%;
+    width: 100%;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
 .successMessage {
     color: #000;
     text-align: center;
