--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
@@ -14,9 +14,9 @@ input {
     border: 1px solid #D3D3D3;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    width: 5%;
+    // width: 5%;
     height: 5vh;
-    width: 5vh;
+    // width: 5vh;
     z-index: 1;
     display: flex;
     justify-content: center;
@@ -338,7 +338,7 @@ input {
     border: 1px solid #D3D3D3;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    width: 5%;
+   
     height: 6vh;
     width: 6vh;
     z-index: 1;
