--- a/src/app/file-upload-home/child_components/approvals/approvals.component.scss
+++ b/src/app/file-upload-home/child_components/approvals/approvals.component.scss
@@ -164,9 +164,9 @@
     height: 5vh;
     width: 95%;
     display: flex;
-    justify-content: end;
-    gap: 0.5em;
-    margin-top: 2vh;
+    justify-content: start;
+    gap: 1em;
+    margin:0.5rem 0.6rem 1rem;
 
 }
 
