--- a/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/user-upload/user-upload.component.scss
@@ -15,7 +15,8 @@ input {
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     // width: 5%;
-    height: 5vh;
+    height:100%;
+    min-height: 5vh;
     // width: 5vh;
     z-index: 1;
     display: flex;
@@ -230,6 +231,7 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .FeedBackdescription {
@@ -245,7 +247,7 @@ input {
 
 .feedBackEmojiContainer {
     height: 5vh;
-    width: 50%;
+    width: 100%;
     display: flex;
     gap: 0.5em
 }
