--- a/src/app/file-upload-home/file-upload-home.component.scss
+++ b/src/app/file-upload-home/file-upload-home.component.scss
@@ -59,7 +59,7 @@
         width: 100%;
         .card_image{
             height: 10vh;
-            width: 10vw;
+            width: 100px;
 
         }
        .btn_title{
